# saege

./: .gitignore  CMakeLists.txt  CONCEPT  README.md  Saege.cpp
model/: ImageColorPicker.cpp  ImageColorPicker.hpp  ImageColorPicker.ui  LineEdit.cpp  LineEdit.hpp  LineEditDelegate.cpp  LineEditDelegate.hpp  Matrix.cpp  Matrix.hpp  MatrixAddColumnCommand.cpp  MatrixAddColumnCommand.hpp  MatrixAddRowCommand.cpp  MatrixAddRowCommand.hpp  MatrixChangeRowNameCommand.cpp  MatrixChangeRowNameCommand.hpp  MatrixHeaderView.cpp  MatrixHeaderView.hpp  MatrixModel.cpp  MatrixModel.hpp  MatrixRemoveColumnCommand.cpp  MatrixRemoveColumnCommand.hpp  MatrixRemoveRowCommand.cpp  MatrixRemoveRowCommand.hpp  MatrixValueChangeCommand.cpp  MatrixValueChangeCommand.hpp  MatrixView.cpp  MatrixView.hpp  Sequence.hpp
model/gfx/: Layer.cpp  Layer.hpp  Layer2D.cpp  Layer2D.hpp  Object.cpp  Object.hpp  Object2D.cpp  Object2D.hpp  Scene.hpp
model/gfx/Objects2D/: Box.cpp  Box.frag  Box.hpp  BoxFrag.hpp  Circle.frag  Line.frag  QuadraticSpline.frag  Repeat.frag  Stroke.frag  Value.cpp  Value.hpp
model/graph/: Graph.cpp  Graph.hpp  GraphModel.cpp  GraphModel.hpp  Node.cpp  Node.hpp  NodeModel.cpp  NodeModel.hpp  NodeView.cpp  NodeView.hpp
sketch/: Model
test/: CMakeLists.txt  GraphTest.cpp  ImageColorPickerTest.cpp  MatrixModelTest.cpp  NodeModelTest.cpp  NodeTest.cpp
tools/: ColorProvider.cpp  ColorProvider.hpp  ReadFile.hpp
ui/: FilePage.cpp  FilePage.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui
ui/EditorPage/EditorPage2D/: AddBoxCommand.cpp  AddBoxCommand.hpp  AddObjectCommand.hpp  EditorPage2D.cpp  EditorPage2D.hpp  EditorPage2D.ui  EditorScene2D.cpp  EditorScene2D.hpp
ui/SequencePage/: SequencePage.hpp
